--- a/.github/workflows/build-boost-packages.yml
+++ b/.github/workflows/build-boost-packages.yml
@@ -6,7 +6,7 @@ on:
       VERSION:
         description: 'Boost version to build and upload'
         required: true
-        default: '1.15.0'
+        default: '1.73.0'
       PUBLISH_RELEASES:
         description: 'Whether to publish releases'
         required: true
@@ -35,8 +35,14 @@ jobs:
 
     - name: Build Boost ${{ env.VERSION }}
       run: |
+        if ('${{ matrix.platform }}' -eq 'win32') {
+          $Toolset = "msvc-14.2"
+        } else {
+          $Toolset = "gcc"
+        }
         ./builders/build-boost.ps1 -Version $env:VERSION `
-                                   -Platform ${{ matrix.platform }}
+                                   -Platform ${{ matrix.platform }} `
+                                   -Toolset $Toolset
     - name: Publish artifact
       uses: actions/upload-artifact@v2
       with:
