--- a/.github/workflows/build-boost-packages.yml
+++ b/.github/workflows/build-boost-packages.yml
@@ -53,9 +53,9 @@ jobs:
     - name: Build Boost ${{ env.VERSION }}
       run: |
         ./builders/build-boost.ps1 -Version $env:VERSION `
-                                   -Platform ${{ matrix.vmImage.platform }} `
-                                   -Architecture ${{ matrix.vmImage.architecture }} `
-                                   -Toolset ${{ matrix.vmImage.toolset }}
+                                   -Platform ${{ matrix.platform }} `
+                                   -Architecture ${{ matrix.architecture }} `
+                                   -Toolset ${{ matrix.toolset }}
     - name: Publish artifact
       uses: actions/upload-artifact@v2
       with:
