--- a/.github/workflows/build-boost-packages.yml
+++ b/.github/workflows/build-boost-packages.yml
@@ -38,11 +38,11 @@ jobs:
             platform: linux-16.04
           - vmImage: vs2017-win2016
             architecture: x64
-            toolset: gcc
+            toolset: msvc-14.1
             platform: win32
           - vmImage: windows-2019
             architecture: x64
-            toolset: gcc
+            toolset: msvc-14.2
             platform: win32
 
     steps:
