--- a/.github/workflows/build-boost-packages.yml
+++ b/.github/workflows/build-boost-packages.yml
@@ -35,13 +35,13 @@ jobs:
           - vmImage: ubuntu-18.04
             architecture: x64
             toolset: gcc
-            platform: linux-16.04
+            platform: linux-18.04
           - vmImage: vs2017-win2016
-            architecture: x64
+            architecture: x86_64
             toolset: msvc-14.1
             platform: win32
           - vmImage: windows-2019
-            architecture: x64
+            architecture: x86_64
             toolset: msvc-14.2
             platform: win32
 
