--- a/.github/workflows/build-boost-packages.yml
+++ b/.github/workflows/build-boost-packages.yml
@@ -22,7 +22,7 @@ jobs:
     name: Build Boost ${{ github.event.inputs.VERSION }} [${{ matrix.vmImage }}]
     runs-on: ubuntu-latest
     env: 
-      ARTIFACT_NAME: Boost-${{ github.event.inputs.VERSION }}-${{ matrix.vmImage }}-x64
+      ARTIFACT_NAME: Boost-${{ github.event.inputs.VERSION }}-${{ matrix.platform }}-${{ matrix.architecture }}
     strategy:
       fail-fast: false
       matrix:
