--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,10 +11,10 @@ jobs:
     - run: Write-Host "ProgramFiles - ${env:ProgramFiles(x86)}"
       shell: pwsh
     - run: |
-        ls
+        Get-ChildItem 
         $vswhereApiUri = "https://api.github.com/repos/Microsoft/vswhere/releases/latest"
         $tag = (Invoke-RestMethod -Uri $vswhereApiUri)[0].tag_name
         $vswhereUri = "https://github.com/Microsoft/vswhere/releases/download/$tag/vswhere.exe"
         Invoke-WebRequest -Uri $vswhereUri -OutFile $vswhere | Out-Null
-        ls
+        Get-ChildItem 
       shell: pwsh
