--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,13 +8,11 @@ jobs:
     name: Test
     runs-on: windows-latest
     steps:
-    - run: Write-Host "ProgramFiles - ${env:ProgramFiles(x86)}"
+    - run: Get-ChildItem -Path C:\Program Files (x86)
       shell: pwsh
-    - run: |
-        Get-ChildItem -Path C:\
-        $vswhereApiUri = "https://api.github.com/repos/Microsoft/vswhere/releases/latest"
-        $tag = (Invoke-RestMethod -Uri $vswhereApiUri)[0].tag_name
-        $vswhereUri = "https://github.com/Microsoft/vswhere/releases/download/$tag/vswhere.exe"
-        Invoke-WebRequest -Uri $vswhereUri -OutFile $vswhere | Out-Null
-        Get-ChildItem -Path C:\
+
+    - run: Get-ChildItem -Path C:\Program Files (x86)\Microsoft Visual Studio
+      shell: pwsh
+
+    - run: Get-ChildItem -Path C:\Program Files (x86)\Microsoft Visual Studio\Installer
       shell: pwsh
