--- a/.github/workflows/build-boost-packages.yml
+++ b/.github/workflows/build-boost-packages.yml
@@ -13,9 +13,9 @@ on:
 
 env:
   VERSION: ${{ github.event.inputs.VERSION }}
-defaults:
-  run:
-    shell: pwsh
+# defaults:
+#   run:
+#     shell: pwsh
 
 jobs:
   build_boost:
@@ -50,9 +50,8 @@ jobs:
         submodules: true
 
     - name: Build Boost ${{ env.VERSION }}
-      shell: powershell
       run: |
-        ./builders/build-boost.ps1 -Version $env:VERSION `
+        powershell ./builders/build-boost.ps1 -Version $env:VERSION `
                                    -Platform ${{ matrix.platform }} `
                                    -Architecture ${{ matrix.architecture }} `
                                    -Toolset ${{ matrix.toolset }}
