--- a/.github/workflows/build-boost-packages.yml
+++ b/.github/workflows/build-boost-packages.yml
@@ -19,27 +19,27 @@ defaults:
 
 jobs:
   build_boost:
-    name: Build Boost ${{ github.event.inputs.VERSION }} [${{ matrix.vmImage }}]
-    runs-on: ${{ matrix.vmImage }}
+    name: Build Boost ${{ github.event.inputs.VERSION }} [${{ matrix.os }}]
+    runs-on: ${{ matrix.os }}
     env: 
       ARTIFACT_NAME: Boost-${{ github.event.inputs.VERSION }}-${{ matrix.platform }}-${{ matrix.architecture }}
     strategy:
       fail-fast: false
       matrix:
         include:
-          - vmImage: ubuntu-16.04
+          - os: ubuntu-16.04
             architecture: x64
             toolset: gcc
             platform: linux-16.04
-          - vmImage: ubuntu-18.04
+          - os: ubuntu-18.04
             architecture: x64
             toolset: gcc
             platform: linux-18.04
-          - vmImage: windows-latest
+          - os: windows-latest
             architecture: x86_64
             toolset: msvc-14.1
             platform: win32
-          - vmImage: windows-2019
+          - os: windows-2019
             architecture: x86_64
             toolset: msvc-14.2
             platform: win32
@@ -66,17 +66,20 @@ jobs:
     needs: build_boost
     runs-on: ${{ matrix.os }}
     env: 
-      ARTIFACT_NAME: boost-${{ github.event.inputs.VERSION }}-${{ matrix.platform }}-x64
+      ARTIFACT_NAME: boost-${{ github.event.inputs.VERSION }}-${{ matrix.platform }}-${{ matrix.architecture }}
     strategy:
       fail-fast: false
       matrix:
         include:
-        - os: ubuntu-latest
-          platform: linux
-        - os: macos-latest
-          platform: darwin
+        - os: ubuntu-16.04
+          platform: linux-16.04
+          architecture: x64
+        - os: ubuntu-18.04
+          platform: linux-18.04
+          architecture: x64
         - os: windows-latest
           platform: win32
+          architecture: x86_64
     steps:
     - uses: actions/checkout@v2
       with:
