--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,5 @@
 name: Test
 on:
-  push:
   workflow_dispatch:
 
 jobs:
@@ -8,6 +7,8 @@ jobs:
     name: Test
     runs-on: windows-latest
     steps:
+    - run: 
+      shell:
     - run: Get-ChildItem -Path "C:\Program Files (x86)"
       shell: pwsh
 
