--- a/.github/workflows/build-boost-packages.yml
+++ b/.github/workflows/build-boost-packages.yml
@@ -96,16 +96,18 @@ jobs:
       with:
         path: ${{ runner.temp }}
 
-    # - name: Extract files
-    #   run: |
-    #     if ('${{ matrix.platform }}' -eq 'win32') {
-    #       $artifactName = "${{ env.ARTIFACT_NAME }}.zip"
-    #       7z.exe x "$artifactName" -y | Out-Null 
-    #     } else {
-    #       $artifactName = "${{ env.ARTIFACT_NAME }}.tar.gz"
-    #       tar -xzf $artifactName
-    #     }
-    #   working-directory: ${{ runner.temp }}/${{ env.ARTIFACT_NAME }}
+    - name: Extract files
+      run: |
+        if ('${{ matrix.platform }}' -eq 'win32') {
+          $artifactName = "${{ env.ARTIFACT_NAME }}.zip"
+          ls
+          7z.exe x "$artifactName" -y | Out-Null 
+        } else {
+          $artifactName = "${{ env.ARTIFACT_NAME }}.tar.gz"
+          ls
+          tar -xzf $artifactName
+        }
+      working-directory: ${{ runner.temp }}/${{ env.ARTIFACT_NAME }}
 
     - name: Apply build artifact to the local machine
       run: |
