--- a/.github/workflows/build-boost-packages.yml
+++ b/.github/workflows/build-boost-packages.yml
@@ -111,11 +111,11 @@ jobs:
     #     if ('${{ matrix.platform }}' -eq 'win32') { powershell ./setup.ps1 } else { sh ./setup.sh }
     #   working-directory: ${{ runner.temp }}/${{ env.ARTIFACT_NAME }}
 
-    - name: Setup BOOST_ROOT ${{ env.VERSION }}
+    - name: Setup BOOST_ROOT ${{ github.event.inputs.VERSION }}
       run: |
         $BoostToolcachePath = Join-Path -Path $env:AGENT_TOOLSDIRECTORY -ChildPath "boost"
-        $BoostToolcacheVersionPath = Join-Path -Path $BoostToolcachePath -ChildPath "$(Version)"
-        $boostDirectory = Join-Path $BoostToolcacheVersionPath "$(Architecture)"
+        $BoostToolcacheVersionPath = Join-Path -Path $BoostToolcachePath -ChildPath "${{ github.event.inputs.VERSION }}"
+        $boostDirectory = Join-Path $BoostToolcacheVersionPath "${{ matrix.architecture }}"
         $LD_LIBRARY = Join-Path -Path $boostDirectory -ChildPath "lib"
         Write-Host "BOOST_ROOT = ${boostDirectory}"
       env:
@@ -126,7 +126,7 @@ jobs:
       run: |
         Install-Module Pester -Force -Scope CurrentUser -RequiredVersion 4.10.1
         Import-Module Pester
-        $Platform = If ("$(Platform)" -eq "win32") { "Windows" } else { "Nix" }
+        $Platform = If ("${{ matrix.platform }}" -eq "win32") { "Windows" } else { "Nix" }
         $pesterParams = @(
           @{
             Path="./Common.Tests.ps1";
@@ -134,12 +134,12 @@ jobs:
           @{
             Path="./${Platform}.Tests.ps1";
             Parameters=@{
-              Version="$(Version)";
-              Platform="$(Platform)"
+              Version="${{ github.event.inputs.VERSION }}";
+              Platform="${{ matrix.platform }}"
             }
           }
         )
-        Invoke-Pester -Script $pesterParams -OutputFile "$(Build.SourcesDirectory)/tests/test_results.xml" -OutputFormat NUnitXml
+        Invoke-Pester -Script $pesterParams
       working-directory: ./tests
 
   publish_release:
