--- a/.github/workflows/build-boost-packages.yml
+++ b/.github/workflows/build-boost-packages.yml
@@ -66,19 +66,20 @@ jobs:
     # needs: build_boost
     runs-on: ${{ matrix.os }}
     env: 
+      PLATFORM: ${{ matrix.platform }}
       ARTIFACT_NAME: boost-${{ github.event.inputs.VERSION }}-${{ matrix.platform }}-${{ matrix.toolset }}-${{ matrix.architecture }}
     strategy:
       fail-fast: false
       matrix:
         include:
-        # - os: ubuntu-16.04
-        #   platform: linux-16.04
-        #   toolset: gcc
-        #   architecture: x64
-        # - os: ubuntu-18.04
-        #   platform: linux-18.04
-        #   toolset: gcc
-        #   architecture: x64
+        - os: ubuntu-16.04
+          platform: linux-16.04
+          toolset: gcc
+          architecture: x64
+        - os: ubuntu-18.04
+          platform: linux-18.04
+          toolset: gcc
+          architecture: x64
         - os: windows-2016
           platform: win32
           toolset: msvc14.1
