--- a/.github/workflows/build-boost-packages.yml
+++ b/.github/workflows/build-boost-packages.yml
@@ -64,7 +64,7 @@ jobs:
   test_boost:
     name: Test Boost ${{ github.event.inputs.VERSION }} [${{ matrix.platform }}]
     # needs: build_boost
-    runs-on: ${{ matrix.os }}
+    runs-on: ${{ matrix.platform }}
     env: 
       PLATFORM: ${{ matrix.platform }}
       ARTIFACT_NAME: boost-${{ github.event.inputs.VERSION }}-${{ matrix.platform }}-${{ matrix.toolset }}-${{ matrix.architecture }}
