--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,13 +7,10 @@ jobs:
     name: Test
     runs-on: windows-latest
     steps:
-    - run: 
-      shell:
-    - run: Get-ChildItem -Path "C:\Program Files (x86)"
-      shell: pwsh
-
-    - run: Get-ChildItem -Path "C:\Program Files (x86)\Microsoft Visual Studio"
-      shell: pwsh
-
-    - run: Get-ChildItem -Path "C:\Program Files (x86)\Microsoft Visual Studio\Installer"
+    - run: |
+        If ($IsWindows) {
+          Write-Host "Win"
+        } else {
+          Write-Host "Ubuntu"
+        }
       shell: pwsh
