--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   Test:
     name: Test
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
     - run: |
         If ($IsWindows) {
