--- a/.github/workflows/build-boost-packages.yml
+++ b/.github/workflows/build-boost-packages.yml
@@ -15,7 +15,7 @@ env:
   VERSION: ${{ github.event.inputs.VERSION }}
 defaults:
   run:
-    shell: pwsh
+    shell: powershell
 
 jobs:
   # build_boost:
@@ -67,6 +67,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     env: 
       PLATFORM: ${{ matrix.platform }}
+      VERSION: ${{ github.event.inputs.VERSION }}
       ARTIFACT_NAME: boost-${{ github.event.inputs.VERSION }}-${{ matrix.platform }}-${{ matrix.toolset }}-${{ matrix.architecture }}
     strategy:
       fail-fast: false
