--- a/.github/workflows/build-boost-packages.yml
+++ b/.github/workflows/build-boost-packages.yml
@@ -18,48 +18,48 @@ defaults:
     shell: pwsh
 
 jobs:
-  # build_boost:
-  #   name: Build Boost ${{ github.event.inputs.VERSION }} [${{ matrix.os }}]
-  #   runs-on: ${{ matrix.os }}
-  #   env: 
-  #     ARTIFACT_NAME: Boost-${{ github.event.inputs.VERSION }}-${{ matrix.platform }}-${{ matrix.architecture }}
-  #   strategy:
-  #     fail-fast: false
-  #     matrix:
-  #       include:
-  #         - os: ubuntu-16.04
-  #           architecture: x64
-  #           toolset: gcc
-  #           platform: linux-16.04
-  #         - os: ubuntu-18.04
-  #           architecture: x64
-  #           toolset: gcc
-  #           platform: linux-18.04
-  #         - os: windows-2016
-  #           architecture: x86_64
-  #           toolset: msvc-14.1
-  #           platform: win32
-  #         - os: windows-2019
-  #           architecture: x86_64
-  #           toolset: msvc-14.2
-  #           platform: win32
+  build_boost:
+    name: Build Boost ${{ github.event.inputs.VERSION }} [${{ matrix.os }}]
+    runs-on: ${{ matrix.os }}
+    env: 
+      ARTIFACT_NAME: Boost-${{ github.event.inputs.VERSION }}-${{ matrix.platform }}-${{ matrix.architecture }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: ubuntu-16.04
+            architecture: x64
+            toolset: gcc
+            platform: linux-16.04
+          - os: ubuntu-18.04
+            architecture: x64
+            toolset: gcc
+            platform: linux-18.04
+          - os: windows-2016
+            architecture: x86_64
+            toolset: msvc-14.1
+            platform: win32
+          - os: windows-2019
+            architecture: x86_64
+            toolset: msvc-14.2
+            platform: win32
 
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #     with:
-  #       submodules: true
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        submodules: true
 
-  #   - name: Build Boost ${{ env.VERSION }}
-  #     run: |
-  #       ./builders/build-boost.ps1 -Version $env:VERSION `
-  #                                  -Platform ${{ matrix.platform }} `
-  #                                  -Architecture ${{ matrix.architecture }} `
-  #                                  -Toolset ${{ matrix.toolset }}
-  #   - name: Publish artifact
-  #     uses: actions/upload-artifact@v2
-  #     with:
-  #       name: ${{ env.ARTIFACT_NAME }}
-  #       path: ${{ runner.temp }}/artifact
+    - name: Build Boost ${{ env.VERSION }}
+      run: |
+        ./builders/build-boost.ps1 -Version $env:VERSION `
+                                   -Platform ${{ matrix.platform }} `
+                                   -Architecture ${{ matrix.architecture }} `
+                                   -Toolset ${{ matrix.toolset }}
+    - name: Publish artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: ${{ env.ARTIFACT_NAME }}
+        path: ${{ runner.temp }}/artifact
 
   test_boost:
     name: Test Boost ${{ github.event.inputs.VERSION }} [${{ matrix.platform }}]
@@ -93,24 +93,24 @@ jobs:
       with:
         submodules: true
 
-    # - name: Fully cleanup the toolcache directory before testing
-    #   run: ./helpers/clean-toolcache.ps1 -ToolName "boost"
+    - name: Fully cleanup the toolcache directory before testing
+      run: ./helpers/clean-toolcache.ps1 -ToolName "boost"
 
-    # - name: Download artifact
-    #   uses: actions/download-artifact@v2
-    #   with:
-    #     path: ${{ runner.temp }}
+    - name: Download artifact
+      uses: actions/download-artifact@v2
+      with:
+        path: ${{ runner.temp }}
 
-    # - name: Extract files
-    #   run: |
-    #       $artifactName = "${{ env.ARTIFACT_NAME }}.tar.gz"
-    #       tar -xzf $artifactName
-    #   working-directory: ${{ runner.temp }}/${{ env.ARTIFACT_NAME }}
+    - name: Extract files
+      run: |
+          $artifactName = "${{ env.ARTIFACT_NAME }}.tar.gz"
+          tar -xzf $artifactName
+      working-directory: ${{ runner.temp }}/${{ env.ARTIFACT_NAME }}
 
-    # - name: Apply build artifact to the local machine
-    #   run: |
-    #     if ('${{ matrix.platform }}' -eq 'win32') { powershell ./setup.ps1 } else { sh ./setup.sh }
-    #   working-directory: ${{ runner.temp }}/${{ env.ARTIFACT_NAME }}
+    - name: Apply build artifact to the local machine
+      run: |
+        if ('${{ matrix.platform }}' -eq 'win32') { powershell ./setup.ps1 } else { sh ./setup.sh }
+      working-directory: ${{ runner.temp }}/${{ env.ARTIFACT_NAME }}
 
     - name: Setup BOOST_ROOT ${{ github.event.inputs.VERSION }}
       run: |
@@ -126,11 +126,6 @@ jobs:
         Write-Host "BOOST_ROOT = ${boostDirectory}"
         echo "::set-env name=BOOST_ROOT::${boostDirectory}"
         echo "::set-env name=LD_LIBRARY_PATH::${LD_LIBRARY}"
-
-    - name: Check env var
-      run: |
-        $env:BOOST_ROOT
-        $env:LD_LIBRARY_PATH
 
     - name: Run tests
       run: |
