--- a/.github/workflows/build-boost-packages.yml
+++ b/.github/workflows/build-boost-packages.yml
@@ -63,7 +63,7 @@ jobs:
 
   test_boost:
     name: Test Boost ${{ github.event.inputs.VERSION }} [${{ matrix.platform }}]
-    # needs: build_boost
+    needs: build_boost
     runs-on: ${{ matrix.os }}
     env: 
       PLATFORM: ${{ matrix.platform }}
