--- a/.github/workflows/build-boost-packages.yml
+++ b/.github/workflows/build-boost-packages.yml
@@ -22,7 +22,7 @@ jobs:
     name: Build Boost ${{ github.event.inputs.VERSION }} [${{ matrix.os }}]
     runs-on: ${{ matrix.os }}
     env: 
-      ARTIFACT_NAME: Boost-${{ github.event.inputs.VERSION }}-${{ matrix.platform }}-${{ matrix.architecture }}
+      ARTIFACT_NAME: boost-${{ github.event.inputs.VERSION }}-${{ matrix.platform }}-${{ matrix.toolset }}-${{ matrix.architecture }}
     strategy:
       fail-fast: false
       matrix:
@@ -82,11 +82,11 @@ jobs:
           architecture: x64
         - os: windows-2016
           platform: win32
-          toolset: msvc14.1
+          toolset: msvc-14.1
           architecture: x86_64
         - os: windows-2019
           platform: win32
-          toolset: msvc14.2
+          toolset: msvc-14.2
           architecture: x86_64
     steps:
     - uses: actions/checkout@v2
