--- a/.github/workflows/build-boost-packages.yml
+++ b/.github/workflows/build-boost-packages.yml
@@ -93,8 +93,8 @@ jobs:
       with:
         submodules: true
 
-    - name: Fully cleanup the toolcache directory before testing
-      run: ./helpers/clean-toolcache.ps1 -ToolName "boost"
+    # - name: Fully cleanup the toolcache directory before testing
+    #   run: ./helpers/clean-toolcache.ps1 -ToolName "boost"
 
     # - name: Download artifact
     #   uses: actions/download-artifact@v2
