--- a/.github/workflows/build-boost-packages.yml
+++ b/.github/workflows/build-boost-packages.yml
@@ -103,8 +103,15 @@ jobs:
 
     - name: Extract files
       run: |
+          Import-Module (Join-Path $PSScriptRoot "../helpers" | Join-Path -ChildPath "win-helpers.psm1") -DisableNameChecking
           $artifactName = "${{ env.ARTIFACT_NAME }}.tar.gz"
-          tar -xzf $artifactName
+          If ("${{ matrix.platform }}" -eq "win32") {
+            $assetTarPath = $artifactName.TrimEnd(".tar.gz")
+            Extract-SevenZipArchive -Path $artifactName -DestinationPath $assetTarPath
+            Extract-SevenZipArchive -Path $assetTarPath -DestinationPath ../
+          } else {
+            tar -xzf $artifactName
+          }
       working-directory: ${{ runner.temp }}/${{ env.ARTIFACT_NAME }}
 
     - name: Apply build artifact to the local machine
@@ -114,14 +121,8 @@ jobs:
 
     - name: Setup BOOST_ROOT ${{ github.event.inputs.VERSION }}
       run: |
-        $targetPath = $env:AGENT_TOOLSDIRECTORY
-        if ([string]::IsNullOrEmpty($targetPath)) {
-            # GitHub Windows images don't have `AGENT_TOOLSDIRECTORY` variable
-            $targetPath = $env:RUNNER_TOOL_CACHE
-        }
-        $BoostToolcachePath = Join-Path -Path $targetPath -ChildPath "boost"
-        $BoostToolcacheVersionPath = Join-Path -Path $BoostToolcachePath -ChildPath "${{ github.event.inputs.VERSION }}"
-        $boostDirectory = Join-Path $BoostToolcacheVersionPath "${{ matrix.architecture }}"
+        Import-Module (Join-Path $PSScriptRoot "../helpers" | Join-Path -ChildPath "common-helpers.psm1") -DisableNameChecking
+        $boostDirectory = GetToolDirectory -ToolName "boost" -Version "${{ github.event.inputs.VERSION }}" -Architecture "${{ matrix.architecture }}"
         $LD_LIBRARY = Join-Path -Path $boostDirectory -ChildPath "lib"
         Write-Host "BOOST_ROOT = ${boostDirectory}"
         echo "::set-env name=BOOST_ROOT::${boostDirectory}"
